fixed listexamples